how to render latex

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
   MIT License
 -->
 
+<!-- Mathjax Support -->
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
 <head>
   <title>
   {%- if page.layout == "home" -%}
