--- a/.container/_includes/head.html
+++ b/.container/_includes/head.html
@@ -4,6 +4,11 @@
   MIT License
 -->
 
+<!-- Mathjax Support -->
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
 <head>
   <title>
   {%- if page.layout == "home" -%}
