--- a/.container/_layouts/post.html
+++ b/.container/_layouts/post.html
@@ -4,6 +4,9 @@ layout: default
 # © 2017-2019 Cotes Chung
 # MIT Licensed
 ---
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 
 {% include date-format.html %}
 
