--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 # MIT Licensed
 ---
 
+{% include mathjax.html %}
 {% include date-format.html %}
 
 <div class="col-12 col-lg-11 col-xl-8">
